# mac-phoenix

./: .gitignore  .gitmodules  CLAUDE.md  README.md  SESSION_SUMMARY.md  build_test_rom.sh  config.example.json  meson.build  package-lock.json  package.json  playwright.config.ts  test_patch_boot_globs.S  test_patch_boot_globs.elf
macemu-next/: .gitignore  CLAUDE.md  DIAGNOSIS.md  EMULOPS_FIXES.md  ImplementationSummary.md  VIDEO_PIPELINE_STATUS.md  check_framebuffer.sh  config.example.json  convert_emulops.py  debug_running_instance.sh  meson.build  meson_options.txt  package-lock.json  package.json  playwright.config.ts  run_traces.sh  test_aline_emulop.c  test_video_pipeline.sh  trace-config.json  unicorn_backward_branch_patch.diff
macemu-next/.claude/: README.md  context.md  debugging_guide.md  instructions.md
macemu-next/docs/: Architecture.md  Commands.md  DUAL_ARCHITECTURE_DESIGN.md  DeveloperGuide.md  ImplementationResults.md  JsonConfig.md  MMIO_IMPLEMENTATION_PLAN.md  NextSteps.md  ProjectGoals.md  README.md  ReconciliationPlan.md  RevisedReconciliationPlan.md  StatusSummary.md  ThreadingArchitecture.md  TodoStatus.md  TroubleshootingGuide.md  UnicornBackwardBranchPatchResults.md  UnicornPerformanceAnalysis.md  WEBRTC_INTEGRATION_STATUS.md  WebRtcIntegrationStatus.md
macemu-next/docs/archive/: README.md
macemu-next/docs/archive/planning/: COMPREHENSIVE_CLEANUP_PLAN.md  DOCUMENTATION_CLEANUP_2026_01_21.md  FILE_MIGRATION_PLAN.md  INITIALIZATION_REFACTOR_ANALYSIS.md  JSON_CONFIG_MIGRATION_SUMMARY.md  (+4 more)
macemu-next/docs/completed/: INTERRUPT_COMPLETE.md  PROJECT-OVERVIEW.md  TIMER_IMPLEMENTATION_FINAL.md  UNICORN_RTR_FIX.md
macemu-next/docs/deepdive/: JIT_SMC_Detection_Analysis.md  MemoryArchitecture.md  README.md  UAE_vs_Unicorn_Implementation_Analysis.md  UnicornIRQStormDebugSession.md
macemu-next/roms/: EMULOP_JIT_DOCUMENTATION.md  EMULOP_VS_MMIO_SUMMARY.md  TEST_ROM_SUITE.md  UNICORN_ALTERNATIVES_TO_EMULOPS.md  a6_boundary_test.rom  a6_skip_test.rom  advanced_edge_tests.rom  boundary_test.rom  build_a6_boundary_test.py  build_a6_skip_test.py  build_advanced_edge_tests.py  build_boundary_test.py  build_edge_test_suite.py  build_emulop_jit_test.py  build_mmio_test.py  build_mmio_transport_test.py  edge_test_suite.rom  emulop_jit_test.rom  mmio_test.rom  mmio_transport_test.rom
macemu-next/scripts/: COMPARISON_RESULTS.md  analyze_boot_divergence.sh  analyze_performance_issue.sh  benchmark_boot_progress.sh  build-unicorn.sh  compare_boot.sh  disassemble_rom.py  run_traces.sh  test_emulator.py  trace-config.json  trace_boot_divergence.sh  trace_scsi_return.sh
macemu-next/scripts/compare_configs/: basilisk.prefs  macemu.json
macemu-next/src/: main.cpp  main.cpp.backup
macemu-next/src/common/: crash_handler_init.cpp  platform.cpp
macemu-next/src/config/: config_manager.cpp  config_manager.h  emulator_config.cpp  emulator_config.h  meson.build
macemu-next/src/core/: adb.cpp  boot_progress.cpp  boot_progress.h  cpu_context.cpp  cpu_context.h  disk.cpp  emul_op.cpp  emulator_init.cpp  emulator_init.h  ether.cpp  extfs.cpp  meson.build  rom_patches.cpp  rom_patches_aline.cpp  rom_patches_unicorn.cpp  rom_patches_unified.cpp  rsrc_patches.cpp  slot_rom.cpp  timer.cpp
macemu-next/src/cpu/: cpu_dualcpu.c  cpu_trace.h  cpu_uae.c  cpu_unicorn.cpp  emulop_c_wrapper.cpp  m68k_interrupt.c  meson.build  mmio_emulop_transport.c  uae_wrapper.cpp  unicorn_exception.c  unicorn_exec_loop.c  unicorn_wrapper.c  unicorn_wrapper.h
macemu-next/src/drivers/: meson.build
macemu-next/src/webrtc/: meson.build  webrtc_server.cpp  webrtc_server.h
macemu-next/src/webserver/: api_handlers.cpp  api_handlers.h  file_scanner.cpp  meson.build  static_files.cpp  webserver_main.cpp
macemu-next/subprojects/: unicorn-rte-fix.patch
macemu-next/test_roms/: build_aline_test.sh  build_irq_test.sh  run_irq_tests.sh  run_simple_irq_test.sh  test_aline_trap.s  test_irq_emulop.s  test_irq_simple.elf  test_irq_simple.rom  test_irq_simple.s
macemu-next/tests/: crash_test.cpp  meson.build  test_api_endpoints.sh  test_boot_to_finder.sh  test_mouse_position.sh
macemu-next/tests/e2e/: boot-to-dialog-headless.sh  boot-to-dialog.sh  emulator.spec.ts  fixtures.ts  mouse-input.spec.ts  screenshot.spec.ts  stall-detection.spec.ts
macemu-next/tests/emulop/: test_aline_emulop_working.c  test_aline_rom.c  test_aline_simple.c  test_hook_intr.c  test_undefined_opcodes.c
macemu-next/tools/: find_cpu_offset.c
src/config/: config_manager.h  emulator_config.cpp  emulator_config.h  meson.build  prefs_manager.h
src/core/: adb.cpp  audio.cpp  boot_progress.cpp  boot_progress.h  cdrom.cpp  command_bridge.cpp  command_bridge.h  cpu_context.cpp  cpu_context.h  cpu_process.cpp  cpu_process.h  disk.cpp  emul_op.cpp  emul_op_ppc.cpp  emul_op_ppc.h  emulator_init.cpp  emulator_init.h  ether.cpp  extfs.cpp  json_config.cpp  json_config.h  macos_util.cpp  main.cpp  meson.build  prefs.cpp  prefs_items.cpp  rom_patches.cpp  rom_patches_ppc.cpp  rom_patches_ppc.h  rsrc_patches.cpp  scsi.cpp  serial.cpp  shared_state.h  slot_rom.cpp  sony.cpp  timer.cpp  video.cpp
src/cpu/: cpu_dualcpu.c  cpu_ppc_stubs.c  cpu_ppc_unicorn.cpp  cpu_trace.c  cpu_uae.c  cpu_unicorn.cpp  emulop_c_wrapper.cpp  meson.build  uae_wrapper.cpp  uae_wrapper.h  unicorn_exception.c  unicorn_exec_loop.c  unicorn_validation.cpp  unicorn_wrapper.c  unicorn_wrapper.h
src/cpu/kpx/: meson.build
src/cpu/uae_cpu/: basilisk_glue.cpp  basilisk_stubs.cpp  config.h  cpu_emulation.h  cpuemu_nf.cpp  cpustbl_nf.cpp  memory.h  meson.build  newcpu.cpp  noflags.h
tests/: meson.build  test_api_endpoints.sh  test_boot_to_finder.sh  test_command_bridge.sh  test_config_api.sh  test_extfs.sh  test_mouse_position.sh
tests/e2e/: boot-to-dialog-headless.sh  boot-to-dialog.sh  codec-fullstack.spec.ts  codec.spec.ts  config-modal.spec.ts  emulator.spec.ts  fixtures.ts  mouse-input.spec.ts  screenshot.spec.ts  screenshots.spec.ts  settings-dialog.spec.ts  stall-detection.spec.ts  stop-reset.spec.ts  take-screenshot.ts  test-config-h264.json  ui-basic.spec.ts
(+236 files in other folders)
