# CPU tests
# DISABLED: Linker errors
# test_unicorn_m68k = executable('test_unicorn_m68k',
#   'cpu/test_unicorn_m68k.c',
#   link_with: [cpu_lib],
#   dependencies: [unicorn_dep, threads_dep, m_dep],
#   include_directories: include_directories('../src/cpu')
# )
# test('Unicorn M68K wrapper test', test_unicorn_m68k)

# Boot test
subdir('boot')

# Crash handler test
crash_test = executable('crash_test',
  'crash_test.cpp',
  '../src/common/crash_handler_init.cpp',
  include_directories: [
    include_directories('../src/common/include'),
  ],
  install: false,
)
